Adds rewind/forward support in WPF version.

--- a/Source/Pekspro.RadioStorm.Sandbox.WPF/App.xaml
+++ b/Source/Pekspro.RadioStorm.Sandbox.WPF/App.xaml
@@ -9,6 +9,7 @@
             <converters:BoolToSelectionModeConverter x:Key="BoolToSelectionMode" />
             <converters:BoolToVisibilityConverter x:Key="InvertedBoolToVisibilityConverter" VisibleValue="False" />
             <converters:MediaStateConverter x:Key="MediaStateConverter" />
+            <converters:TimeSpanToSeekSizeStringConverter x:Key="TimeSpanToSeekSizeStringConverter" />
             <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
             <converters:NullImageConverter x:Key="NullImageConverter" />
             <converters:BoolToBrushConverter x:Key="BoolToIsListenedColorConverter" 
